RESOLVED FIXED237737
Fix naming in NetworkProcessProxy::registerRemoteWorkerClientProcess()
https://bugs.webkit.org/show_bug.cgi?id=237737
Summary Fix naming in NetworkProcessProxy::registerRemoteWorkerClientProcess()
Chris Dumez
Reported 2022-03-10 15:17:38 PST
Fix naming in NetworkProcessProxy::registerRemoteWorkerClientProcess() to store referring to shared workers and add logging.
Attachments
Patch (8.12 KB, patch)
2022-03-10 15:19 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2022-03-10 15:19:06 PST
Geoffrey Garen
Comment 2 2022-03-10 16:21:49 PST
Comment on attachment 454408 [details] Patch r=me
EWS
Comment 3 2022-03-10 17:48:50 PST
Committed r291140 (248300@main): <https://commits.webkit.org/248300@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454408 [details].
Radar WebKit Bug Importer
Comment 4 2022-03-10 17:49:16 PST
Note You need to log in before you can comment on or make changes to this bug.