Fix naming in NetworkProcessProxy::registerRemoteWorkerClientProcess() https://bugs.webkit.org/show_bug.cgi?id=237737

Reviewed by Geoffrey Garen.

Fix naming in NetworkProcessProxy::registerRemoteWorkerClientProcess() to store referring to
shared workers and add logging.

* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::registerRemoteWorkerClientProcess):
(WebKit::NetworkProcessProxy::unregisterRemoteWorkerClientProcess):
* UIProcess/Network/NetworkProcessProxy.h:
* UIProcess/Network/NetworkProcessProxy.messages.in:



Canonical link: https://commits.webkit.org/248300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291140 268f45cc-cd09-0410-ab3c-d52691b4dbfc